# ai-chat-file-ingestion

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  HANDOFF_PHRASE.md  Makefile  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
.husky/: pre-push
apps/parser-service/: AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
apps/parser-service/src/: config.py  main.py
apps/parser-service/src/models/: __init__.py  schemas.py
apps/parser-service/src/routes/: convert.py  health.py
apps/parser-service/src/services/: __init__.py  converter.py
apps/parser-service/src/telemetry/: __init__.py  tracing.py
apps/parser-service/tests/: conftest.py
apps/parser-service/tests/integration/: test_api.py  test_real_conversion.py
apps/parser-service/tests/unit/: test_converter.py  test_schemas.py
apps/web/: .prettierignore  AGENTS.md  Dockerfile  jest.config.js  jest.setup.ts  next.config.js  package.json  tsconfig.json
apps/web/coverage/: clover.xml  coverage-final.json  lcov.info
apps/web/coverage/lcov-report/: index.html
apps/web/e2e/: chat-full-flow.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ChatInput.tsx  ChatInterface.tsx  ErrorBoundary.tsx  FileUploader.tsx  MessageList.tsx  ModelSelector.tsx
apps/web/src/hooks/: useChat.ts  useChunkIndex.ts  useEmbeddings.ts  useFileUpload.ts  useModels.ts
apps/web/src/lib/: chunking.ts  embeddings.ts  fetch-with-retry.ts  llm-client.ts  minisearch-index.ts  parser-client.ts
apps/web/src/types/: index.ts
apps/web/tests/functional/: chat-e2e.test.tsx
(+33 files in other folders)
